--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.boldijarpaul.polihack"
+        applicationId "com.boldijarpaul.mvpsample"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -56,7 +56,4 @@ dependencies {
     apt 'com.google.dagger:dagger-compiler:2.0.1'
     provided 'org.glassfish:javax.annotation:10.0-b28'
     compile 'nl.2312:rxcupboard:0.5'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.google.android.gms:play-services-maps:8.3.0'
-    compile 'com.sromku:simple-fb:4.1.1'
 }
